--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,6 +30,17 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+/* Hide Scrollbar START */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Safari dan Chrome */
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE dan Edge */
+  scrollbar-width: none; /* Firefox */
+}
+/* Hide Scrollbar END */
+
 /* Switch Toggle START */
 /* The switch - the box around the slider */
 .switch {
